nit: Fix titles text align

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -13,6 +13,7 @@
   flex-direction: column;
   align-items: center;
   gap: 2px;
+  text-align: center;
 }
 
 .title {
